[gd_scene load_steps=27 format=3 uid="uid://nt70xpo04560"]

[ext_resource type="Script" uid="uid://dj03n44puinmb" path="res://Scenes/Enemies/ArcherBandit/ArcherBandit.gd" id="1_85il2"]
[ext_resource type="Texture2D" uid="uid://thsd4aph1ck5" path="res://Assets/Enemies/Archer Bandit/Archer Bandit Sprite Sheet Full.png" id="1_gfho0"]
[ext_resource type="Script" uid="uid://bb0t2ovl7wifo" path="res://addons/beehave/nodes/beehave_tree.gd" id="2_hhpxn"]
[ext_resource type="Script" uid="uid://cg016dbe7gs1x" path="res://addons/beehave/nodes/composites/sequence.gd" id="3_gh6gh"]
[ext_resource type="Script" uid="uid://cn26qr1u25bex" path="res://Scripts/AI/Global/BH_IsAlive.gd" id="4_21hr0"]
[ext_resource type="Script" uid="uid://7np33t66fmy8" path="res://Scripts/AI/Global/BH_GetPlayerInstance.gd" id="5_bsp7v"]
[ext_resource type="Script" uid="uid://cw22yurt5l74k" path="res://addons/beehave/nodes/composites/selector_reactive.gd" id="6_bsp7v"]
[ext_resource type="Script" uid="uid://dqudov72sagck" path="res://Scripts/AI/Global/BH_IsInAttackRange.gd" id="7_wrtjk"]
[ext_resource type="Script" uid="uid://5llb6og77u7k" path="res://Scripts/AI/Global/BH_IsTakingDamage.gd" id="8_1rla6"]
[ext_resource type="Script" uid="uid://d2q3ddshnifto" path="res://Scripts/AI/Global/BH_Stun.gd" id="9_2oyo0"]
[ext_resource type="Script" uid="uid://chi3e2k4w4eak" path="res://Scripts/AI/ArcherBandit/BH_AttackPlayer.gd" id="9_85il2"]
[ext_resource type="Script" uid="uid://bh8o8dhjaset6" path="res://Scripts/AI/Global/BH_AttackCooldown.gd" id="9_lsylb"]
[ext_resource type="Script" uid="uid://cyajtrab1551x" path="res://Scripts/AI/ArcherBandit/BH_Idle.gd" id="11_ajw4f"]
[ext_resource type="Script" uid="uid://cqdt6ulya0cn1" path="res://Scripts/Enemies/ArcherBandit/ArcherBanditHurtBox.gd" id="12_p4df8"]

[sub_resource type="Animation" id="Animation_21hr0"]
resource_name = "Attack_Left"
length = 2.3
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2, 2.125, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3), Vector2i(10, 3), Vector2i(11, 3), Vector2i(12, 3), Vector2i(13, 3), Vector2i(14, 3), Vector2i(15, 3), Vector2i(16, 3), Vector2i(18, 3), Vector2i(17, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-23, -15)]
}

[sub_resource type="Animation" id="Animation_gh6gh"]
resource_name = "Attack_Right"
length = 2.3
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2, 2.125, 2.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(12, 2), Vector2i(13, 2), Vector2i(14, 2), Vector2i(15, 2), Vector2i(16, 2), Vector2i(17, 2), Vector2i(18, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, -15)]
}

[sub_resource type="Animation" id="Animation_p4df8"]
resource_name = "Death_Left"
length = 2.1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 17), Vector2i(1, 17), Vector2i(2, 17), Vector2i(3, 17), Vector2i(4, 17), Vector2i(5, 17), Vector2i(6, 17), Vector2i(7, 17), Vector2i(14, 17)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_i7gb5"]
resource_name = "Death_Right"
length = 2.1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 16), Vector2i(1, 16), Vector2i(2, 16), Vector2i(3, 16), Vector2i(4, 16), Vector2i(5, 16), Vector2i(6, 16), Vector2i(7, 16), Vector2i(8, 16), Vector2i(9, 16), Vector2i(10, 16), Vector2i(11, 16), Vector2i(12, 16), Vector2i(13, 16), Vector2i(14, 16)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -16)]
}

[sub_resource type="Animation" id="Animation_7ps0r"]
resource_name = "Idle_Left"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-23, -15)]
}

[sub_resource type="Animation" id="Animation_gfho0"]
resource_name = "Idle_Right"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, -15)]
}

[sub_resource type="Animation" id="Animation_hhpxn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, -15)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wrtjk"]
resource_name = "Walk Left"
length = 0.9
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(6, 7), Vector2i(7, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-22, -15)]
}

[sub_resource type="Animation" id="Animation_bsp7v"]
resource_name = "Walk Right"
length = 0.9
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsp7v"]
_data = {
&"Attack_Left": SubResource("Animation_21hr0"),
&"Attack_Right": SubResource("Animation_gh6gh"),
&"Death_Left": SubResource("Animation_p4df8"),
&"Death_Right": SubResource("Animation_i7gb5"),
&"Idle_Left": SubResource("Animation_7ps0r"),
&"Idle_Right": SubResource("Animation_gfho0"),
&"RESET": SubResource("Animation_hhpxn"),
&"Walk Left": SubResource("Animation_wrtjk"),
&"Walk Right": SubResource("Animation_bsp7v")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gh6gh"]
size = Vector2(15, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4df8"]
size = Vector2(15, 18)

[node name="ArcherBandit" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 524355
script = ExtResource("1_85il2")

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(23, -15)
texture = ExtResource("1_gfho0")
hframes = 19
vframes = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bsp7v")
}

[node name="ArcherBanditBeehaveTree" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("2_hhpxn")
blackboard = NodePath("@Node@21808")
actor = NodePath("..")
metadata/_custom_type_script = "uid://bb0t2ovl7wifo"

[node name="SequenceComposite" type="Node" parent="ArcherBanditBeehaveTree"]
script = ExtResource("3_gh6gh")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="IsAlive" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite"]
script = ExtResource("4_21hr0")
metadata/_custom_type_script = "uid://cn26qr1u25bex"

[node name="GetPlayerInstance" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite"]
script = ExtResource("5_bsp7v")
metadata/_custom_type_script = "uid://7np33t66fmy8"

[node name="SelectorReactiveComposite" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite"]
script = ExtResource("6_bsp7v")
metadata/_custom_type_script = "uid://cw22yurt5l74k"

[node name="DamagedBehaviour" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite"]
script = ExtResource("3_gh6gh")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="IsTakingDamage" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/DamagedBehaviour"]
script = ExtResource("8_1rla6")
metadata/_custom_type_script = "uid://5llb6og77u7k"

[node name="Stun" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/DamagedBehaviour"]
script = ExtResource("9_2oyo0")
metadata/_custom_type_script = "uid://d2q3ddshnifto"

[node name="AttackComposite" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite"]
script = ExtResource("3_gh6gh")
metadata/_custom_type_script = "uid://cg016dbe7gs1x"

[node name="IsInAttackRange" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/AttackComposite"]
script = ExtResource("7_wrtjk")
attackRange = 200.0
metadata/_custom_type_script = "uid://dqudov72sagck"

[node name="AttackCooldown" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/AttackComposite"]
script = ExtResource("9_lsylb")
cooldown = 4.0
metadata/_custom_type_script = "uid://bh8o8dhjaset6"

[node name="ArcherBanditAttackPlayer" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/AttackComposite/AttackCooldown"]
script = ExtResource("9_85il2")
metadata/_custom_type_script = "uid://chi3e2k4w4eak"

[node name="ArcherBanditIdle" type="Node" parent="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite"]
script = ExtResource("11_ajw4f")
metadata/_custom_type_script = "uid://cyajtrab1551x"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -9)
shape = SubResource("RectangleShape2D_gh6gh")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 9
monitoring = false
script = ExtResource("12_p4df8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -9)
shape = SubResource("RectangleShape2D_p4df8")
debug_color = Color(0.960519, 0, 0.515574, 0.42)

[connection signal="animation_finished" from="AnimationPlayer" to="ArcherBanditBeehaveTree/SequenceComposite/SelectorReactiveComposite/AttackComposite/AttackCooldown/ArcherBanditAttackPlayer" method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_area_entered"]
[connection signal="damageTaken" from="Hurtbox" to="." method="_on_hurtbox_damage_taken"]
